springboot-start-project/src/main/k8s/local/infinispan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: infinispan-deployment
    namespace: microservice-local
spec:
    replicas: 1
    selector:
        matchLabels:
            app: infinispan-deployment
    template:
        metadata:
            labels:
                app: infinispan-deployment
        spec:
            containers:
                -   name: infinispan
                    image: quay.io/infinispan/server
                    ports:
                        -   name: is-port
                            containerPort: 11222
                    volumeMounts:
                        -   name: infinispan-storage
                            mountPath: /data

            volumes:
                -   name: infinispan-storage
                    persistentVolumeClaim:
                        claimName: infinispan-persistent-volume-claim
