springboot-start-project/src/main/k8s/local/microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: microservice-deployment
    namespace: microservice-local
    labels:
        app: microservice-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            app: microservice-deployment
    template:
        metadata:
            labels:
                app: microservice-deployment
        spec:
            containers:
                -   name: microservice
                    #image: docker.io/sfey/springboot-start-project:latest
                    image: sfey/springboot-start-project:latest
                    # For example pulling is not needed in Minikube
                    command: [ "java-execute" ]
                    #args: ["echo 'Hello World'; exec myapp --start"]
                    imagePullPolicy: Never
                    ports:
                        -   name: ms-port
                            containerPort: 8080
                    volumeMounts:
                        -   name: nfs-volume
                            mountPath: /mnt/gintra
            volumes:
                -   name: nfs-volume
                    persistentVolumeClaim:
                        claimName: xyz-nfs-persistent-volume-claim
