springboot-start-project/src/main/k8s/local/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-deployment
    namespace: microservice-local
spec:
    replicas: 1
    selector:
        matchLabels:
            app: postgres-deployment
    template:
        metadata:
            labels:
                app: postgres-deployment
        spec:
            containers:
                -   name: postgres
                    image: postgres:16.4
                    ports:
                        -   name: pg-port
                            containerPort: 5432
                    volumeMounts:
                        -   mountPath: /var/lib/postgresql/data
                            name: postgres-storage
            volumes:
                -   name: postgres-storage
                    persistentVolumeClaim:
                        claimName: postgres-persistent-volume-claim
