springboot-start-project/src/main/k8s/local/infinispan-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: infinispan-service
    namespace: microservice-local
spec:
    type: ClusterIP
    selector:
        app: infinispan-deployment
    ports:
        -   protocol: TCP
            port: 11222
            targetPort: is-port
