springboot-start-project/src/main/k8s/local/microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: microservice-service
    namespace: microservice-local
spec:
    selector:
        app.kubernetes.io/name: microservice
    ports:
        -   protocol: TCP
            # Port where Ingress forwards to
            port: 80
            # Deployment or POD port
            targetPort: 8080
