springboot-start-project/src/main/k8s/local/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres-service
    namespace: microservice-local
spec:
    type: ClusterIP
    selector:
        #app.kubernetes.io/name: microservice
        app: postgres-deployment
    ports:
        -   protocol: TCP
            port: 5432
            targetPort: pg-port
