springboot-start-project/src/main/k8s/local/microservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: microservice-ingress
    namespace: microservice-local
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    #ingressClassName: nginx-example
    ingressClassName: nginx
    rules:
        -   host: microservice-local
            http:
                paths:
                    -   path: /microservice-local
                        pathType: Prefix
                        backend:
                            service:
                                name: microservice-service
                                port:
                                    number: 80
